# ChangeLog for gnome-base/libgnomeprintui
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeprintui/ChangeLog,v 1.43 2004/03/23 14:00:01 foser Exp $

*libgnomeprintui-2.6.0 (23 Mar 2004)

  23 Mar 2004; foser <foser@gentoo.org> libgnomeprintui-2.6.0.ebuild :
  Gnome 2.6 final

*libgnomeprintui-2.5.4 (21 Mar 2004)

  21 Mar 2004; foser <foser@gentoo.org> libgnomeprintui-2.5.4.ebuild :
  Gnome 2.6 commit

  15 Mar 2004; Stephen P. Becker <geoman@gentoo.org>
  libgnomeprintui-2.4.2.ebuild:
  Added ~mips keyword.

  28 Jan 2004; Aron Griffis <agriffis@gentoo.org>
  libgnomeprintui-2.4.2.ebuild:
  stable on alpha and ia64

  17 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org> :
  manifest fix

  16 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org>
  libgnomeprintui-2.4.2.ebuild:
  set ppc in keywords

  13 Jan 2004; <gustavoz@gentoo.org> libgnomeprintui-2.4.2.ebuild:
  stable on hppa and sparc

  13 Dec 2003; Brad House <brad_mssw@gentoo.org> libgnomeprintui-2.4.2.ebuild:
  mark stable on amd64

  13 Dec 2003; Guy Martin <gmsoft@gentoo.org> libgnomeprintui-2.4.0.ebuild:
  Marked stable on hppa

*libgnomeprintui-2.4.2 (27 Nov 2003)

  27 Nov 2003; foser <foser@gentoo.org> libgnomeprintui-2.4.2.ebuild :
  New release 

*libgnomeprintui-2.4.1 (25 Nov 2003)

  25 Nov 2003; foser <foser@gentoo.org> libgnomeprintui-2.4.1.ebuild :
  New release

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org>
  libgnomeprintui-2.4.0.ebuild:
  Stable on ia64

  08 Nov 2003; Todd Sunderlin <todd@gentoo.org> libgnomeprintui-2.4.0.ebuild:
  added sparc keyword

  22 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org>
  libgnomeprintui-2.4.0.ebuild:
  set ppc in keywords

  16 Oct 2003; Aron Griffis <agriffis@gentoo.org>
  libgnomeprintui-2.4.0.ebuild:
  Stable on alpha

  09 Oct 2003; foser <foser@gentoo.org> libgnomeprintui-2.*.ebuild :
  Fix libgnomeprint dep to be more specific (#30520)
