@@ -1,12 +1,14 @@
-MD5 2a7a6beb80cb9141c6e02a14b7578084 libgnomeprintui-1.116.0.ebuild 800
-MD5 65ff1ec5e38e6f2d64f961a7a358e4e7 libgnomeprintui-2.4.0.ebuild 662
-MD5 ce716b9384bcdcb54569542965b28c3b libgnomeprintui-2.4.2.ebuild 667
-MD5 05f1d9cdce0935987d49190befc8a511 ChangeLog 5406
-MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 363995841bd26287519a6e74a2b4ceff libgnomeprintui-2.6.0.ebuild 746
+MD5 363995841bd26287519a6e74a2b4ceff libgnomeprintui-2.6.1.ebuild 746
+MD5 ce716b9384bcdcb54569542965b28c3b libgnomeprintui-2.4.2.ebuild 667
+MD5 65ff1ec5e38e6f2d64f961a7a358e4e7 libgnomeprintui-2.4.0.ebuild 662
+MD5 2a7a6beb80cb9141c6e02a14b7578084 libgnomeprintui-1.116.0.ebuild 800
+MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
+MD5 05f1d9cdce0935987d49190befc8a511 ChangeLog 5406
+MD5 4bb0abca3932a751bb44db9d48c20b18 files/digest-libgnomeprintui-2.4.2 74
+MD5 18289359b871af166c305a4e908642be files/digest-libgnomeprintui-1.116.0 76
 MD5 c19ecd012203d7a7f503ceb3d0c30f3a files/libgnomeprintui-2-syntax_fix.patch 895
 MD5 f007d30bd0ba486b3d83d47cd460b4c9 files/libgnomeprintui-1-syntax_fix.patch 603
-MD5 18289359b871af166c305a4e908642be files/digest-libgnomeprintui-1.116.0 76
-MD5 39a45b5c32335b15bca5b11d76e29b5d files/digest-libgnomeprintui-2.4.0 74
-MD5 4bb0abca3932a751bb44db9d48c20b18 files/digest-libgnomeprintui-2.4.2 74
+MD5 0fb6f1b0c3217961db073ca22f45c8cb files/digest-libgnomeprintui-2.6.1 74
 MD5 36adff026f0569396631cc1428b7d199 files/digest-libgnomeprintui-2.6.0 74
+MD5 39a45b5c32335b15bca5b11d76e29b5d files/digest-libgnomeprintui-2.4.0 74
