@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeprintui/Attic/libgnomeprintui-1.116.0.ebuild,v 1.11 2003/09/21 18:32:49 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeprintui/Attic/libgnomeprintui-1.116.0.ebuild,v 1.12 2004/04/22 03:28:58 khai Exp $
 
 inherit gnome2 eutils
 
