@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeprintui/Attic/libgnomeprintui-2.4.0.ebuild,v 1.9 2003/12/13 00:44:02 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeprintui/Attic/libgnomeprintui-2.4.0.ebuild,v 1.10 2004/04/22 03:28:58 khai Exp $
 
 inherit gnome2
 
