@@ -1,0 +1,25 @@
+# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeprintui/Attic/libgnomeprintui-2.6.1.ebuild,v 1.1 2004/04/22 03:28:58 khai Exp $
+
+inherit gnome2
+
+DESCRIPTION="user interface libraries for gnome print"
+HOMEPAGE="http://www.gnome.org/"
+LICENSE="GPL-2 LGPL-2.1"
+
+SLOT="2.2"
+KEYWORDS="~x86 ~ppc ~alpha ~sparc ~hppa ~amd64 ~ia64 ~mips"
+IUSE="doc"
+
+RDEPEND=">=x11-libs/gtk+-2.4
+	=gnome-base/libgnomeprint-${PV}*
+	>=gnome-base/libgnomecanvas-2
+	>=x11-themes/gnome-icon-theme-1.2.0"
+
+DEPEND="${RDEPEND}
+	sys-devel/gettext
+	>=dev-util/pkgconfig-0.12.0
+	doc? ( >=dev-util/gtk-doc-1 )"
+
+DOCS="AUTHORS COPYING* ChangeLog INSTALL NEWS README"
