@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libgnomeprintui
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeprintui/ChangeLog,v 1.43 2004/03/23 14:00:01 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeprintui/ChangeLog,v 1.44 2004/04/22 03:28:58 khai Exp $
+
+  21 Apr 2004; <khai@gentoo.org> :
+  Version bump.
 
 *libgnomeprintui-2.6.0 (23 Mar 2004)
 
